qbittorrent/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
  name: service
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
  name: service-torrent
spec:
  type: LoadBalancer
  selector:
    app: qbittorrent
  ports:
    - name: torrent-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
