qbittorrent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: qbittorrent
  annotations:
    spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  #tls:
  #  - hosts:
  #      - qbittorrent.nuc.lan
  #    secretName: qbittorrent-tls
  rules:
    - host: qb.nuc.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8080
    - host: qb.nanova.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8080
